# weblog

./: .gitignore  README.md  build_blog.sh  config.example.json  config.json
.github/workflows/: build.yml
articles/: domain_knowledge.md  how_to_share_domain_knowledge_fast.html
drafts/: SCALABLE_UI.md  domain_knowledge.md  dont_use_signals.md  on_burnout.md  thoughts_on_react_devs.md  web_from_scratch.md
nodejs/: package-lock.json  package.json
nodejs/sw/: package.json  rollup.config.js
weblog-js/: README.md  package-lock.json  package.json  tsconfig.json
weblog-rs/: Cargo.toml  README.md
weblog-rs/blog/: README.md
weblog-rs/blog/src/components/: Cargo.toml
weblog-rs/build_blog/: Cargo.toml
weblog-rs/build_blog/src/: main.rs
weblog-rs/builder/: Cargo.toml  README.md
weblog-rs/builder/src/: main.rs  pages.rs
weblog-rs/components/src/: document.rs
weblog-rs/config/: Cargo.toml
weblog-rs/config/src/: lib.rs
weblog-rs/flyweight/src/: lib.rs
weblog-rs/generate_assets/: Cargo.toml
weblog-rs/generate_pages/: Cargo.toml
weblog-rs/generate_pages/src/: main.rs
weblog-rs/pages/: Cargo.toml  README.md
weblog-rs/pages/components/: document.rs  type_flyweight.rs
weblog-rs/pages/generate_pages/: generate_pages.rs
weblog-rs/pages/pages/: home.rs
weblog-rs/pages/src/: document.rs  home.rs  lib.rs
weblog-rs/pages/src/components/: document.rs  open_graph.rs
weblog-rs/pages/src/pages/: home.rs
weblog-rs/server/src/: main.rs
weblog-rs/sqlite_interface/: Cargo.toml  README.md
weblog-rs/sqlite_interface/src/: account_actions.rs  emails.rs  ip_rate_limits.rs  lib.rs  login_rate_limits.rs  people.rs  ratelimits.rs  roles-people.rs  roles.rs  roles_to_people.rs  session_rate_limits.rs  sessions-people.rs  sessions.rs
weblog-rs/sqlite_maintenance/: Cargo.toml  lib.rs
weblog-rs/sqlite_maintenance/src/: main.rs
weblog-rs/weblog/: Cargo.toml  README.md
weblog-rs/weblog/src/: main.rs  service.rs
www/: import-map.json.html  index.html  manifest.webmanifest  tsconfig.json
