[workspace]
resolver = "2"
members = [ "config", "flyweight", "sqlite_interface", "sqlite_maintenance" ]

[workspace.dependencies]
argon2 = { version = "0.5", features = ["std"] }
base64 = { version = "0.21" }
coyote = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1" }
coyote_html = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1" }
futures = "0.3"
rand = "0.9.0"
rusqlite = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snowprints = { git = "https://github.com/taylor-vann/snowprints", version = "0.1" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
walk_directory = { git = "https://github.com/wolfpup-software/walk_directory-rs", version = "0.1" }
password-hash = "0.5.0"
