[workspace]
resolver = "2"
members = ["config", "pages", "builder", "weblog"]

[workspace.dependencies]
bytes = "1"
futures-util = { version = "0.3", default-features = false }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio-util = "0.7.10"
tokio = { version = "1", features = ["full"] }

coyote = { git = "https://github.com/w-lfpup/coyote-rs", version = "0.1" }
file_server_response = { git = "https://github.com/w-lfpup/file_server", version = "0.1", package = "response" }
walk_directory = { git = "https://github.com/w-lfpup/walk_directory-rs", version = "0.1" }