[package]
name = "generate_pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
coyote = { workspace = true }
coyote_html = { workspace = true }
config = { path = "../config" }
futures = { workspace = true }
pages = { path = "../pages" }
