[package]
name = "sqlite_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { workspace = true}
config = { path = "../config" }
flyweight = { path = "../flyweight" }
tokio = { workspace = true }
rusqlite = { workspace = true }
snowprints = { workspace = true }
password-hash = "0.5.0"
rand = { workspace = true }